--- a/slides/style.css
+++ b/slides/style.css
@@ -1,15 +1,22 @@
 @import url('https://fonts.googleapis.com/css?family=Cuprum:400,400i,700,700i&subset=cyrillic');
 @import url('https://fonts.googleapis.com/css?family=Scada:400,400i,700,700i&subset=cyrillic');
 
-body { font-family: 'Scada', serif; font-size: 20pt; }
-p { font-size: 20pt; }
-ul { font-size: 20pt; }
-ol { font-size: 20pt; }
+body { font-family: 'Scada', serif; font-size: 22pt; }
+p { font-size: 22pt; margin-top: 0;}
+ul { font-size: 22pt; }
+ol { font-size: 22pt; }
+h3 { margin-top: 0;}
+.caption { font-size: 20pt; }
+.right-column { padding: 0px; }
+.red { color: crimson; }
+.blue { color: steelblue; }
+.large { font-size: 25pt; }
+
 h1, h2, h3 {
   font-family: 'Cuprum';
   font-weight: bold;
 }
-table { font-size: 16pt; }
+table { font-size: 18pt; }
 img {
   margin-bottom: 0;
   padding-bottom: 0;
