--- a/docs/slides/style.css
+++ b/docs/slides/style.css
@@ -3,12 +3,12 @@
 
 body { font-family: 'Scada', serif; font-size: 22pt; }
 p { font-size: 22pt; margin-top: 0;}
-ul { font-size: 22pt; }
+ul { font-size: 22pt;}
 ol { font-size: 22pt; }
 h3 { margin-top: 0;}
 .caption { font-size: 20pt; }
 .right-column { padding: 0px; }
-.left-column { font-size: 14pt;}
+.left-column { font-size: 14pt; color: black;}
 .red { color: crimson; }
 .blue { color: steelblue; }
 .large { font-size: 25pt; }
