--- a/slides/style.css
+++ b/slides/style.css
@@ -9,6 +9,14 @@ h3 { margin-top: 0;}
 .caption { font-size: 20pt; }
 .right-column { padding: 0px; }
 .left-column { font-size: 14pt; color: black;}
+.left-60 {
+  width: 60%;
+  float: left;
+}
+.right-40 {
+  width: 40%;
+  float: right;
+}
 .red { color: crimson; }
 .blue { color: steelblue; }
 .large { font-size: 25pt; }
